# planc

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  bors.toml  build.rs
.github/workflows/: ci.yml  publish.yml
common/: Cargo.toml
common/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: api.rs  connection.rs  context.rs  error.rs  main.rs  protocol.rs  session.rs  web.rs
web/: Cargo.toml  Dockerfile  angular.json  build.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  Router.tsx  admin.rs  cards.rs  context.rs  home.rs  index.html  main.rs  participants.rs  session.rs  theme.ts  websocket.rs
web/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  login.component.ts  login.guard.ts  main.component.ts  session.service.ts
web/src/components/: AdminPanel.component.tsx  AdminUserActions.tsx  Cards.component.tsx  Statistics.component.tsx  UserTable.component.tsx
web/src/context/: SessionControlProvider.tsx
web/src/pages/: Login.page.tsx  Session.page.tsx
