[package]
name = "planc"
version = "0.4.2"
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
hyper = { version = "1.0", features = ["server", "http1", "tcp"] }
include_dir = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.11", features = ["full"] }
tokio-tungstenite = "0.18"
