[package]
name = "planc"
version = "0.5.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
http-body-util = "0.1.3"
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1.13", features = ["tokio"] }
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.11", features = ["full"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
